fix(financial): cerrar fase 3 P0 y preservar historial
Corrige el recálculo de mensualidades manteniendo importeInicial inmutable y usando Clock para la fecha de pago.

Restringe los pagos vencidos a obligaciones activas con saldo positivo y elimina la mutación de asociaciones JPA durante el mapeo.

Unifica la baja lógica de alumnos, preserva inscripciones, asistencias y matrículas, y elimina IAlumnoServicio por no aportar una abstracción real.

Agrega pruebas de regresión y documenta el cierre, los clear() pendientes y los riesgos financieros todavía abiertos.

Validation: backend clean verify PASS (55 tests); frontend lint/test/build PASS (8 tests); Compose local/prod PASS; Docker backend build PASS; git diff --check PASS.